--- a/wp-content/themes/short-film/assets/short-film_less/global/footer.less
+++ b/wp-content/themes/short-film/assets/short-film_less/global/footer.less
@@ -19,11 +19,14 @@
 	}
 
 	.social-links{
+        margin-bottom: 5px;
+        height: 30px;
 		.link{
 			position: static;
 			.icon{
-				margin: 0 2px;
-				padding: 0 4px;
+				margin: 0;
+                margin-right: 8px;
+				padding: 2px 4px;
 			}
 			.fa{
 				color: @white;
@@ -37,6 +40,23 @@
 		white-space: normal;
 		color: @gray;
 	}
+    
+    .footer-links {
+        .menu {
+            padding: 0;
+            list-style-type: none;
+            li a {
+                text-transform: uppercase;
+                display: block;
+                float: left;
+                width: 25%;
+                margin-bottom: 19.5px;
+            }
+        }
+    }
+    .form-group {
+        label {padding-top: 6px;}
+    }
 }
 
 .footer-bar{
